Major changes since 0.95
------------------------

- The $in_reply_to configuration variable is gone.  The In-Reply-To
  header currently only contains the message-id of the message to
  which the reply refers.  This is to make sure that this header is
  correctly formatted.

- Mutt was affected by the so-called "pine remote exploit".  We have
  implemented a work-around we believe to be safe.  See
  README.SECURITY and the mailcap_sanitize option for details, and
  check your mailcap files for insecure entries.

- The use_mailcap option has gone.  Instead, we now have
  implicit_autoview.  See the manual for details.

- We have more translations than ever before.  Supported languages
  now include cs, de, es, fr, id, it, ko, nl, pl, ru, sk, uk.  And
  en, as usual.

- Mutt now uses version 0.12 of the "regex" library instead of rx.
  This library is believed to be far more stable than rx.  See
  INSTALL for details.

- The annoying "maildir erratic behaviour" bug could finally be
  tracked down and fixed as of 0.95.6.

- There were some major improvements with the IMAP code.  It should
  work rather correctly against most common IMAP servers now.

Major changes since 0.93
------------------------

- i18n support of various kinds: Mutt now comes with character set
  definitions, so it is able to convert character sets you encounter
  in e-mail messagese to your local display's character set as
  defined by the $charset configuration variable.  This includes a
  poorly-tested UTF-8 decoder.

  Additionally, mutt includes GNU gettext support, so you can make
  it speak your own language.  To use this, just set the environment
  variable "LANG" appropriately.

  (For a list of currently supported languages, have a look at the
  po files in the po subdirectory.)

- There is support for the POP3 "last" command for just fetching the
  latest unread messages from your POP server.  To enable use of
  this feature, set the $pop_last configuration option.
